--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </header>
       <section>
         <h3>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/Sgyl_OHLCjYrel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Sgyl_OHLCjY?rel=0&autoplay=true" frameborder="0" allowfullscreen></iframe>
          
 
 
