--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
       </header>
       <section>
         <h3>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/Sgyl_OHLCjY?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
-         
+          <div style="position: fixed; z-index: 1000; width: 100%; height: 100%">
+ <iframe frameborder="0" height="100%" width="100%" 
+ src="https://www.youtube.com/embed/Sgyl_OHLCjY?
+ autoplay=1&controls=0&showinfo=0&autohide=1">
+ </iframe>
+ </div>
 
-
- 
