--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Maxdurante.GitHub.io by MaxDurante</title>
+    <font color="white">
+    <title>Max Durante</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -21,7 +22,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Maxdurante.GitHub.io</h1>
+        <h1>Max Durante</h1>
         <p></p>
 
 
