--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <div style="position: fixed; z-index: 1000; width: 100%; height: 100%">
  <iframe frameborder="0" height="100%" width="100%" 
  src="https://www.youtube.com/embed/Sgyl_OHLCjY?
- autoplay=1&controls=0&showinfo=0&autohide=1">
+ autoplay=true&controls=0&showinfo=0&autohide=1">
  </iframe>
  </div>
   <head>
