--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <!doctype html>
 <html>
-  <div style="position: fixed; z-index: 1000; width: 100%; height: 100%">
- <iframe frameborder="0" height="100%" width="100%" 
- src="https://www.youtube.com/embed/Sgyl_OHLCjY?
- autoplay=true&controls=0&showinfo=0&autohide=1">
- </iframe>
- </div>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/Sgyl_OHLCjY" frameborder="0" allowfullscreen></iframe>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
