--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     <![endif]-->
   </head>
   <body>
-   body
-{
-background: #E0E0E0; 
-}
+   <body bgcolor="#000000">
     <div class="wrapper">
       <header>
         <h1>Max Durante</h1>
