--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <font color="white">
+    
     <title>Max Durante</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
@@ -18,9 +18,9 @@
   <body>
    <body bgcolor="#000000">
     <div class="wrapper">
-      <header>
+      <header><font color="white">
         <h1>Max Durante</h1>
         <p></p>
-
+</body>
 
         <p class="view"><a href="https://github.com/MaxDurante">View My GitHub Profile</a></p>
