--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
   <body>
    <body bgcolor="#000000">
     <div class="wrapper">
-      <header><font color="white">
+      <header>
+        <font color="white">
         <h1>Max Durante</h1>
-        <p></p>
-</body>
+        
 
-        <p class="view"><a href="https://github.com/MaxDurante">View My GitHub Profile</a></p>
+
+        <p class="view"><a href="https://github.com/MaxDurante">Open Archives</a></p>
+</body>
