--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <![endif]-->
   </head>
   <body>
+    body
+{
+background: #E0E0E0; 
+}
    <body bgcolor="#000000">
     <div class="wrapper">
       <header>
