--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
-
-
 <html>
+  <STYLE TYPE="text/css">
+
+BODY {background-color: #000000;}
+
+</STYLE> 
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -16,7 +19,6 @@
     <![endif]-->
   </head>
   <body>
-   <body bgcolor="#000000">
     <div class="wrapper">
       <header>
         <font color="white">
