--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
 
         <p class="view"><a href="https://github.com/MaxDurante">Open Archives</a></p>
-<iframe width="1000" height="300" src="https://www.youtube.com/embed/rhsnMTMJzc4" frameborder="0" allowfullscreen>autoplay=true&controls=0&showinfo=0&autohide=1"></iframe>
-<STYLE TYPE="text/css">
+
+<iframe id="ytplayer" type="text/html" width="640" height="390"
+  src="https://www.youtube.com/embed/rhsnMTMJzc4?autoplay=1"
+  frameborder="0"/><STYLE TYPE="text/css">
 
 BODY {background-color: #000000;}
 
